WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35714
computed style on delayed transform animations is incorrect
https://bugs.webkit.org/show_bug.cgi?id=35714
Summary
computed style on delayed transform animations is incorrect
Dean Jackson
Reported
2010-03-03 19:06:01 PST
Created
attachment 49978
[details]
testcase An animation with a delay that modifies transform is returning the incorrect computed style. Instead of giving the initial (or unanimated value), it is giving the value at the first keyframe. I suspect this have never been tested because the pause API doesn't handle animation delays:
https://bugs.webkit.org/show_bug.cgi?id=35696
Attachments
testcase
(2.18 KB, text/html)
2010-03-03 19:06 PST
,
Dean Jackson
no flags
Details
Patch
(5.34 KB, patch)
2010-03-24 14:25 PDT
,
Simon Fraser (smfr)
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2010-03-05 14:59:00 PST
Remember to unskip the animation/fill-mode-transform.html test on Leopard when this is fixed
Dean Jackson
Comment 2
2010-03-05 16:04:46 PST
on unskip on Snow Leopard
Simon Fraser (smfr)
Comment 3
2010-03-24 14:25:02 PDT
Created
attachment 51540
[details]
Patch
Dean Jackson
Comment 4
2010-03-24 14:31:20 PDT
Haven't tested yet, but remember to update the Skipped files (Leopard and SnowLeopard)
Simon Fraser (smfr)
Comment 5
2010-03-25 07:31:49 PDT
http://trac.webkit.org/changeset/56543
Eric Seidel (no email)
Comment 6
2010-03-25 16:42:37 PDT
Buildbot seems to think this might have broken some windows tests. But then again, buildbot is incredibly behind today and may be confused:
http://build.webkit.org/results/Windows%20Debug%20(Tests)/r56543%20(11279)/results.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug